--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,15 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+
+# VS Code Project file
+.vscode
+
+#Test Input files
+*.xml
